--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  banner_carousel: ^1.2.1
+  google_fonts: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -21,7 +23,7 @@ dev_dependencies:
 
   
   flutter_lints: ^2.0.0
-  google_fonts: ^4.0.3
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -37,6 +39,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/imgs/
+    - assets/products/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
