--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   banner_carousel: ^1.2.1
   google_fonts: ^4.0.3
+  dio: ^5.1.2
+  flutter_toastr: ^1.0.3
+  shared_preferences: ^2.1.1
 
 dev_dependencies:
   flutter_test:
